# SFT-Mx

./: .gitignore  LICENSE  README.md  detailed_code_diff.md  optimization_report.md  pixi.toml  pyproject.toml  sample.ipynb  server.py  webui.py
experiments/: cath_bench.py  dimensionality_control.py  dual_sweep.py  gt_comparison.py  regen_figs5.py  skip_pattern_clustering.py  skip_pattern_drivers.py  ss_skip_analysis.py  teacache_skip_patterns.py  threshold_sweep.py  uniform_step_sweep.py
publication/: figure1.py  figure1_alt.py  figure2.py  figure_supplement.py
publication/data/: CATH300.csv  cath_benchmark_full.csv  cath_benchmark_full.json  clustering_results.json  crystallization_results.json  dimensionality_control.csv  dimensionality_control.json  diverse_cath_300.json  dual_sweep_simplefold_1.1B.json  dual_sweep_simplefold_1.6B.json  dual_sweep_simplefold_100M.json  dual_sweep_simplefold_360M.json  dual_sweep_simplefold_3B.json  dual_sweep_simplefold_700M.json  dual_sweep_summary.csv  gt_comparison.csv  skip_patterns.json  ss_content.json  threshold_summary.csv  threshold_sweep.json  uniform_step_sweep.json  uniform_vs_adaptive.csv  warmup_comparison.json
src/simplefold/: cli.py  inference.py  train.py  wrapper.py
src/simplefold/model/: simplefold.py
src/simplefold/model/mlx/: layers.py  teacache.py
src/simplefold/model/torch/: teacache.py
src/simplefold/processor/: protein_processor.py
src/simplefold/utils/: boltz_utils.py  fasta_utils.py
