[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplefold-turbo"
version = "0.1.0"
description = "Folding proteins faster with SimpleFold."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Geoffrey Taghon", email = "gtaghon1@jh.edu" },
    { name = "Yuyang Wang", email = "yuyangw@apple.com" },
    { name = "Miguel Angel Bautista Martin", email = "mbautistamartin@apple.com" }
]
dependencies = [
    "lightning==2.5.2",
    "biopython==1.85",
    "hydra-colorlog==1.2.0",
    "mediapy==1.0.2",
    "ipykernel==6.22.0",
    "ipyvtklink==0.2.3",
    "gemmi==0.7.3",
    "biotite==1.2.0",
    "rdkit==2025.3.5",
    "gemmi==0.7.3",
    "p-tqdm==1.4.2",
    "einops==0.8.1",
    "mashumaro==3.16",
    "ihm==2.7",
    "modelcif==1.4",
    "dm-tree==0.1.9",
    "click==8.2.1",
    "timm==1.0.19",
    "py3Dmol==2.5.2",
    "scikit-learn==1.7.1",
    "pandas==2.3.1",
    "seaborn==0.13.2",
]

[project.urls]
Homepage = "https://github.com/usnistgov/simplefold-turbo"

# Optional: create a CLI command `sft` that calls simplefold/cli.py:main()
[project.scripts]
sft = "simplefold.cli:main"

# Tell hatchling where your packages live when using src layout:
[tool.hatch.build.targets.wheel]
packages = ["src/simplefold"]

# Tell setuptools to include YAML files from configs
[tool.setuptools.packages.find]
where = ["src"]
include = ["simplefold*"]

[tool.setuptools.package-data]
"simplefold.configs" = ["**/*.yaml"]